--- a/CSS/about.css
+++ b/CSS/about.css
@@ -3,13 +3,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 h1{
-    text-align: center;
-    color: aliceblue;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0;
+    color: black;
+}
+p{
+    color: black;
 }
 .navbar {
   overflow: hidden;;
