--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,21 +1,29 @@
-body {
+body { /* This is styling for the font. */ 
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-h1{
-    text-align: center;
-    color: aliceblue;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0;
+h1{ /* This is styling for the header. */ 
+  text-align: center;
+  color: black;
 }
-.navbar {
+* {
+  box-sizing: border-box; /* This is styling for the image. */ 
+}
+.flex-container { /* This is styling for the image. */ 
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+.flex-item-left { /* This is styling for the image. */ 
+  width: 100%;
+  padding: 10px;
+  flex: 100%;
+}
+.navbar { /* This is styling for the nav. */ 
   overflow: hidden;;
   background-color: black;
 }
-.navbar a {
+.navbar a { /* This is styling for the nav. */ 
   float: left;
   display: block;
   color: #f2f2f2;
@@ -24,25 +32,25 @@ h1{
   text-decoration: none;
   font-size: 17px;
 }
-.navbar a:hover {
+.navbar a:hover { /* This is styling for the hover colour. */ 
   background-color: #ddd;
   color: black;
 }
-.navbar a.active {
+.navbar a.active { /* Colour will change if the user is on it. */ 
   background-color: black;
   color: white;
 }
 .navbar .icon {
   display: none;
 }
-@media screen and (max-width: 731px) {
+@media screen and (max-width: 731px) { /* This media is used for hiding parts of the nav bar when on a diffrent view point. */ 
   .navbar a:not(:first-child) {display: none;}
   .navbar a.icon {
     float: right;
     display: block;
   }
 }
-@media screen and (max-width: 731px) {
+@media screen and (max-width: 731px) { /* This media is used for hiding parts of the nav bar when on a diffrent view point. */ 
   .navbar.responsive {position: relative;}
   .navbar.responsive .icon {
     position: absolute;
@@ -55,10 +63,10 @@ h1{
     text-align: left;
   }
 }
-.text-center {
+.text-center { /* This will centre text. */ 
   text-align: center;
 }
-footer {
+footer { /* This is the styling for the footer. This will always be at the bottom of the page. */ 
   position: fixed;
   width: 100%;
   left: 0;
@@ -66,5 +74,4 @@ footer {
   color: white;
   padding: 4px;
   background-color: black;
-        
 }
