--- a/CSS/upcoming.css
+++ b/CSS/upcoming.css
@@ -1,87 +1,74 @@
-body {
+body { /* This is styling for the font. */ 
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-h1{
-    text-align: center;
-    color: aliceblue;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0;
+h1{ /* This is styling for the header. */ 
+  text-align: center;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
 }
 html {
   box-sizing: border-box;
 }
-
 *, *:before, *:after {
-  box-sizing: inherit;
+  box-sizing: inherit; /* This is styling for the container. */ 
 }
-
-.column {
+.column { /* This is styling for the column. */ 
   float: left;
   width: 33.3%;
   margin-bottom: 16px;
   padding: 0 8px;
 }
-
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* This is styling for the box. This will give a outline. */ 
   margin: 8px;
 }
-
-.about-section {
+.about-section { /* This is styling for the about section. */ 
   padding: 50px;
   text-align: center;
   background-color: #474e5d;
   color: white;
 }
-
 .container {
   padding: 0 16px;
 }
-
 .container::after, .row::after {
   content: "";
   clear: both;
   display: table;
 }
-
 .title {
-  color: grey;
+  color: black;
 }
-
-.button {
+.button { /* This is styling for the button on the bottom of the container */ 
   border: none;
   outline: 0;
   display: inline-block;
-  padding: 8px;
+  padding: 7px;
   color: white;
-  background-color: #000;
+  background-color: black;
   text-align: center;
   cursor: pointer;
   width: 100%;
 }
-
-.button:hover {
-  background-color: #555;
-}
-
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 650px) { /* This is resposinsive for the conatiners they will stack on phone viewpoint. */ 
   .column {
     width: 100%;
     display: block;
   }
 }
 body {
-  background-color: white;
+  background-color: white; 
 }
-.navbar {
+.navbar { /* This is styling for the nav. */ 
   overflow: hidden;;
   background-color: black;
 }
-.navbar a {
+.navbar a { /* This is styling for the nav. */ 
   float: left;
   display: block;
   color: #f2f2f2;
@@ -90,25 +77,25 @@ body {
   text-decoration: none;
   font-size: 17px;
 }
-.navbar a:hover {
+.navbar a:hover { /* This is styling for the hover colour. */ 
   background-color: #ddd;
   color: black;
 }
-.navbar a.active {
+.navbar a.active { /* Colour will change if the user is on it. */ 
   background-color: black;
   color: white;
 }
 .navbar .icon {
   display: none;
 }
-@media screen and (max-width: 731px) {
+@media screen and (max-width: 731px) { /* This media is used for hiding parts of the nav bar when on a diffrent view point. */ 
   .navbar a:not(:first-child) {display: none;}
   .navbar a.icon {
     float: right;
     display: block;
   }
 }
-@media screen and (max-width: 731px) {
+@media screen and (max-width: 731px) { /* This media is used for hiding parts of the nav bar when on a diffrent view point. */ 
   .navbar.responsive {position: relative;}
   .navbar.responsive .icon {
     position: absolute;
@@ -121,16 +108,15 @@ body {
     text-align: left;
   }
 }
-.text-center {
+.text-center { /* This will centre text. */ 
   text-align: center;
 }
-footer {
+footer { /* This is the styling for the footer. This will always be at the bottom of the page. */ 
   position: fixed;
   width: 100%;
   left: 0;
   bottom: 0;
   color: white;
   padding: 4px;
-  background-color: black;
-        
+  background-color: black;       
 }
